subscription restructure
